<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_formacao_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@color/blueLight"
        android:padding="10dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_gray"
        />

    <EditText
        android:id="@+id/txtInst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alert_formacao_hint_instituicao"
        android:inputType="textCapSentences"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/txtCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alert_formacao_hint_curso"
        android:inputType="textCapSentences"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/txtDtInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_marginTop="5dp"
        android:hint="@string/alert_formacao_hint_inicio"/>

    <EditText
        android:id="@+id/txtDtFim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_marginTop="5dp"
        android:hint="@string/alert_formacao_hint_conclusao"/>

</LinearLayout>