<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingHorizontal="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtCep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imgLupa"
            android:digits="1234567890"
            android:hint="@string/txt_cep"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgLupa"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/txtCep"
            android:layout_alignBottom="@+id/txtCep"
            android:layout_alignParentEnd="true"
            android:src="@drawable/lupa" />

    </RelativeLayout>

    <EditText
        android:id="@+id/txtRua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcçdefghijklmnopqrstuvxwyzáéíóúâêîôã ÁÉÍÓÚÂÊÔÎÃQWERTYUIOPASDFGHJKLÇZXCVBNM"
        android:enabled="false"
        android:hint="@string/txt_rua"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtEndNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_num"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="20sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/txtEstado"
            android:digits="abcçdefghijklmnopqrstuvxwyzáéíóúâêîôã ÁÉÍÓÚÂÊÔÎÃQWERTYUIOPASDFGHJKLÇZXCVBNM"
            android:enabled="false"
            android:hint="@string/txt_cidade"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEstado"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtCidade"
            android:layout_alignBottom="@+id/txtCidade"
            android:layout_alignParentEnd="true"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNM"
            android:enabled="false"
            android:hint="@string/txt_estado"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters"
            android:maxLength="2"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/txtBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcçdefghijklmnopqrstuvxwyzáéíóúâêîôã ÁÉÍÓÚÂÊÔÎÃQWERTYUIOPASDFGHJKLÇZXCVBNM"
        android:enabled="false"
        android:hint="@string/txt_bairro"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>