<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".view.Home">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragmentInfosPessoais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_infos_pessoais" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragmentPerfilPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_perfil_pro" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_below="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_chat"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"/>

</RelativeLayout>