<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/gray"
    android:elevation="33dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_user"
            android:foreground="@drawable/border_circle_gray"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/lblNomeProfissional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nomeProfissionnal"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/stars"
            android:layout_width="100dp"
            android:layout_height="17dp"
            android:layout_below="@+id/lblNomeProfissional"
            android:layout_alignStart="@+id/lblNomeProfissional"
            android:scaleType="fitStart"
            android:src="@drawable/stars_five" />

        <TextView
            android:id="@+id/lblProfissao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_profissao"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_alignStart="@+id/lblNomeProfissional"
            android:layout_below="@id/stars"/>

        <TextView
            android:id="@+id/lblExperiencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lblProfissao"
            android:layout_toEndOf="@+id/lblProfissao"
            android:layout_alignBottom="@+id/lblProfissao"
            android:gravity="bottom"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginStart="2dp"
            android:text="experiencia" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@color/darkGray"
            android:layout_below="@id/foto"/>

        <TextView
            android:id="@+id/lblDetalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detalhes"
            android:layout_below="@+id/foto"
            android:textColor="@color/links"
            android:textSize="22sp"
            android:layout_marginTop="7dp"
            android:layout_alignEnd="@+id/foto"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>